@@ -162,6 +162,7 @@ Views 6.x-3.0-dev
     o #989092 by dereine: Semantic views integration broke grid view a little.
     o #868972 by dereine: Add a "summary" attribute for accessibility on table and grid styles.
     o #768802 by dereine: Allow sort by node language.
+    o #738792 by dereine: Delete button should be disabled when ajax form is open, just like save button.
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
